--- a/www/styles.css
+++ b/www/styles.css
@@ -11,19 +11,19 @@ color: #FFFFFF;
 }
 
 .btn {
-  background-color:#397EA8;
+  background-color:#3C8DBC;
   color: #FFFFFF;
   font-family: Courier New;
   width:80%;
   /*text-align: center;*/
   text-align: left;
-  font-size: 145%;
+  font-size: 100%;
 }
 
 .btn:hover {
   background-color: #3C8DBC;
   width:85%;
-  font-size: 150%;
+  font-size: 100%;
   color: #FFFFFF;
 }
 
@@ -32,4 +32,41 @@ color: #FFFFFF;
   color: #FFFFFF;
 }
 
+.selectize-input {
+  height: 25px;
+  /*width: 125px;*/
+  width: 22vw;
+  font-size: 7pt;
+  font-weight: normal;
+  border: 3px solid #3c8dbc;
+  
+}
+
+.selectize-control {
+  border-radius: 15px;
+  align-content:center;
+}
+
+.box-body {
+  /*height: 75px;
+  width: 300px;*/
+  border: 3px solid #3c8dbc;
+  border-radius: 25px;
+  
+  padding-bottom: 0;
+  margin-bottom: 0;
+  align-content:center;
+}
+
+.col-sm-4 {
+  border-radius: 5px;
+  /*height: 170px;*/
+}
+
+p {
+  font-size:15px; font-weight: bold;
+}
+.control-label {
+  font-size: 10px;
+}
 
