part 3 of push from wqdi_development

--- a/www/styles.css
+++ b/www/styles.css
@@ -10,8 +10,11 @@ text-align: center;
 color: #FFFFFF;
 }
 
-/*.tabbable > .nav > li > a[data-value='Download'] {background-color: red;   color:white} */
+.tabbable > .nav > li > a[data-value='Download'] {background-color: red;   color:white} 
 
+.program_dt-dt_table {
+  height: 95%;
+}
 
 .btn {
   background-color:#3C8DBC;  
